apps/webserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  namespace: webserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - webserver.cluster.webstra.dev
    secretName: webserver-tls 
  rules:
  - host: webserver.cluster.webstra.dev 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver 
            port:
              number: 80
